

  06 Oct 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.4.ebuild:
  Bump to latest genpatches

*lh-sources-3.16.4 (06 Oct 2014)

  06 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.4.ebuild:
  Bump to latest aufs3, genpatches and linux release

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums of changed files

*lh-sources-3.16.3 (18 Sep 2014)

  18 Sep 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.3.ebuild:
  Bump to latest genpatches and linux release

  14 Sep 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.2.ebuild:
  Bump to latest aufs3

*lh-sources-3.16.2 (13 Sep 2014)

  13 Sep 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.2.ebuild:
  Bump to latest aufs3, genpatches and linux release

  21 Aug 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.1.ebuild:
  Bump to latest aufs3

  15 Aug 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.15.9.ebuild,
  -lh-sources-3.16.0.ebuild, +lh-sources-3.16.1.ebuild:
  Bump to latest aufs3, genpatches and linux release

  10 Aug 2014; Justin Lecher <jlec@gentoo.org>
  +files/lh-sources-3.16-armv6.patch:
  Add missing patch

*lh-sources-3.16.0 (10 Aug 2014)

  10 Aug 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.0.ebuild:
  Bump to latest aufs3, genpatches and linux release

  10 Aug 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.15.3.ebuild,
  -lh-sources-3.15.5.ebuild, -lh-sources-3.15.6.ebuild,
  -lh-sources-3.15.7.ebuild, +lh-sources-3.15.9.ebuild:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.15.7 (30 Jul 2014)

  30 Jul 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.7.ebuild:
  Bump to latest aufs3, genpatches and linux release

  27 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.6.ebuild:
  Bump to latest aufs3

  21 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.6.ebuild:
  Bump to latest aufs3 release

*lh-sources-3.15.6 (18 Jul 2014)
