@@ -15,6 +15,8 @@ DIST genpatches-3.16-4.base.tar.xz 114720 SHA256 62fcf6a199e178c31cf9b439374b96b
 DIST genpatches-3.16-4.extras.tar.xz 17660 SHA256 48e19245992eb3c476f1638f1395e67619bf6b44314a040e08d009cce3d01ee8 SHA512 cba451d240cb44067d7f20ecc1ab92e40b864fcb516e6d28d1f279db069bb7a785c9c78b3bed9047e13702cc46497dd5d520d503e798eb0aa8debe928a2293e1 WHIRLPOOL d328f842ec73e13009d96ce9a9c56a04f5f2b6072871585e40b49e0e8d71412e39c685a5c2861a4684cf880bf2a55c4359a57f515b348dbfce26f7ac5d31519e
 DIST genpatches-3.16-6.base.tar.xz 218188 SHA256 8a3b19d7aa44ad5ef76eba67a809ee01222f4894e1a87d190d31f50f65fc9b7d SHA512 a53fdfe5f9c650d3bc5a669ec9a5b37ce79fc26af2cbba0e1d130427c81fffac8290012ba901e40d7168ff440e455473c9a7f2f24e395de75667d3b22f9f191d WHIRLPOOL c6c3b60d4e6cc5725e1229771c4cabb9b79eaa47e35102061718b99e8f2e600ed22ef7d2031017f97fb5e0b9d6fbad059378196a2b5e81e5f2615a8462fdfe0f
 DIST genpatches-3.16-6.extras.tar.xz 17656 SHA256 196049211951aea66265150cdf50551f9aec727437a54aa09ae7ab736f353c52 SHA512 2d846aed73812274e4b8ab64339a780991cb610fdf465104e804c9ead43efca7ff2b7576fee014672be540b95b8acdb5ba65aa7e65490d0b113ff4f6317fa654 WHIRLPOOL 7fd7d510bd8008eaf850a00dee11e25658cd8ecdadfe222121a9b2603083abc24390e85dbdcd896b5cd07f25e9d606d17ee601bc700ad0e5c4a588037eb236c0
+DIST genpatches-3.16-7.base.tar.xz 227080 SHA256 869812d6e6f3a9637c2694ff848316d7f7dd80198b99cdb0800db213bfcb481d SHA512 ec12e7c5090ebde626d15d6c8df1567734a72abae4ecceafa0fdb4272bcb1ecdb90f5629774ba16b3500dad1ec4d9d1bddb8da191b8d4063fd28794b64b8ff11 WHIRLPOOL 160de994a30a2aada8d800dc0abdbc82b7a48005f1eb92c018f2f3859f86d9a445723135b2c3535a167de65b0f5c5cada4928b1e4bddfd2ced4e794291acdecf
+DIST genpatches-3.16-7.extras.tar.xz 17656 SHA256 376d72d611afd3ac9c13aa5e62b152daa8cb2442409f16b8d8057c8300245740 SHA512 248e57d906890ffe1e0224b417920b97a0ed6d518506711c18a8266ae14c8be1d90d7e1392e09c0c2d618c6c8f8b967f28a59941878f02b794e9112fbe0986d6 WHIRLPOOL 610fbec313780e85900d872ee20f8dcf52241563b645165a42f826e49a69141b74545efe8986bb34f385873d7e1aeab6404be3b53e58e3bf156e5c71185c3983
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.16.tar.xz 80501624 SHA256 4813ad7927a7d92e5339a873ab16201b242b2748934f12cb5df9ba2cfe1d77a0 SHA512 64033e741d3f42ed06010e63e69d66e1d3d9414ef20f76834508878d4218b72619541a18ef4fd377204af2859e52198310998109b20ed9b67722586b28c9a231 WHIRLPOOL 69e5e367751185ff4e8d7c1f23c6f1e8f547fe782f581f6cf5f0bde301fa922185c8b996b815cf19fb7f14ca64042e264e87d321872ee3096adad02b1015769b
