@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.16.5 (10 Oct 2014)
+
+  10 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.5.ebuild:
+  Bump to latest genpatches and linux release
+
   06 Oct 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.4.ebuild:
   Bump to latest genpatches
 
